Add picture for haxm article

--- a/netbsd/haxm.html
+++ b/netbsd/haxm.html
@@ -115,6 +115,8 @@
 -net nic -net user \
 -accel hax</code></pre>
 
+<img src="./images/haxm_001.png" alt="dmesg on NetBSD on QEMU with HAXM">
+
 <h2 id="qanda">トラブルシューティング</h2>
 <h3 id="qa001">Failed to open the hax moduleというエラーが出る</h3>
 <p>権限が足りていないと以下のようなエラーが出てHAXM付きでQEMUを使えません。</p>
