--- a/essay/cc0code.html
+++ b/essay/cc0code.html
@@ -13,8 +13,7 @@
 <h1>CC0 HTMLコードを直す</h1>
 <p>Last Update: <time>2018-12-16</time></p>
 <hr>
-<p>WebページにCreative Commons（CC）ライセンスを明記したいとき、creativecommons.orgが提供しているWebページ<a href="https://creativecommons.org/choose/"> https://creativecommons.org/choose/</a>を使うことで、任意のCCライセンス表記をHTMLコードに出力できます。以下はこのページから出力したCC0のHTMLコードです。
-</p>
+<p>WebページにCreative Commons（CC）ライセンスを明記したいとき、creativecommons.orgが提供しているWebページ<a href="https://creativecommons.org/choose/"> https://creativecommons.org/choose/</a>を使うことで、任意のCCライセンス表記をHTMLコードに出力できます。以下はこのページから出力したCC0のHTMLコードです。</p>
 
 <pre><code>&lt;p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#"&gt;
   &lt;a rel="license"
