Fix: textlinted index.html

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 <ul>
 <li>Ken'ichi Fukamachi &amp; Yuuki Enomoto, <a href="./presentation/asiabsdcon2019/paper.pdf">Design and Implementation of NetBSD Base System Package Distribution Service</a>, AsiaBSDCon 2019</li>
 <li>Yuuki Enomoto, <a href="./presentation/asiabsdcon2019/bof.pdf">About Works and Interests</a>, AsiaBSDCon 2019 NetBSD BoF</li>
-<li>Yuuki Enomoto, <a href="./presentation/jpnetbsdbof/2018/main.pdf"> Progress of basepkg</a>,日本NetBSDユーザーグループ第二十回定期総会およびNetBSD BOF 2018</li>
+<li>Yuuki Enomoto, <a href="./presentation/jpnetbsdbof/2018/main.pdf"> Progress of basepkg</a>,日本NetBSDユーザーグループ第20回定期総会およびNetBSD BOF 2018</li>
 <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2018/main.pdf"> Design, Implementation and Operation of NetBSD Base System Packaging</a>, AsiaBSDCon 2018</li>
 <li>榎本優樹, <a href="./presentation/master/main.pdf"> NetBSD 基本システムのパッケージ化の設計と実装</a>,千歳科学技術大学, 光科学研究科, 博士前期課程, 修士論文, 2018</li>
 <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/ipsj-os2018/main.pdf"> NetBSD ベースシステムパッケージ化の実装報告</a>, 情報処理学会,システムソフトウェアとオペレーティング・システム研究会, 2018年2月研究会</li>
 <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/cif2017/main.pdf"> NetBSD Base System Packaging Using pkg_* Tools</a>, 18th Chitose International Forum, 2017</li>
-<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/jpnetbsdbof/2017/main.pdf"> Basepkgとその進み具合</a>,日本NetBSDユーザーグループ第十九回定期総会およびNetBSD BOF 2017</li>
+<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/jpnetbsdbof/2017/main.pdf"> Basepkgとその進み具合</a>,日本NetBSDユーザーグループ第19回定期総会およびNetBSD BOF 2017</li>
 <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2017/main.pdf"> Maintain the NetBSD Base System Using pkg_* Tools</a>, AsiaBSDCon 2017</li>
-<li>榎本優樹 &amp; 深町賢一 &amp; 青木広宙, <a href="./presentation/imec2016/main.pdf"> Intel RealSense カメラを用いた疑似力触覚体験システム</a>,第21回 知能メカトロニクスワークショップ, 2016</li>
-<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSD を生成するプログラムの展望</a>,情報処理学会, FIT2016 第15回情報科学技術フォーラム, 2016</li>
+<li>榎本優樹 &amp; 深町賢一 &amp; 青木広宙, <a href="./presentation/imec2016/main.pdf">Intel RealSense カメラを用いた疑似力触覚体験システム</a>,第21回知能メカトロニクスワークショップ, 2016</li>
+<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSDを生成するプログラムの展望</a>,情報処理学会, 第15回情報科学技術フォーラム, 2016</li>
 </ul>
 
 <h2 id="log">Meet up log</h2>
