pkgsrc-wip.html: textlint fixed

--- a/netbsd/pkgsrc-wip.html
+++ b/netbsd/pkgsrc-wip.html
@@ -23,7 +23,7 @@
 <p><a href="https://www.pkgsrc.org/wip/users/">The pkgsrc-wip project -- committer access</a>にはpkgsrc-wip開発者の登録からパッケージの作成まで様々な情報が書かれています。これを読んでおけばwipの作業は問題ないでしょう。</p>
 
 <h2 id="practice">パッケージを更新する実例</h2>
-<p>pkgsrc-wipにてwip/basepkgパッケージのバージョンを1.2から1.3に挙げたときの作業手順をここに残します。/usr/pkgsrc/distfilesへのアクセスにroot権限あるいは/usr/pkgsrcに触る権限が必要です。</p>
+<p>pkgsrc-wipでwip/basepkgパッケージのバージョンを1.2から1.3に挙げたときの作業手順を残します。</p>
 
 <h3 id="makefile">Makefileを更新する</h3>
 <pre><code># diff -u Makefile.org Makefile
