how_to_be_developer.html: textlint fixed

--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -13,7 +13,7 @@
 <h1>NetBSD/pkgsrc開発者になる方法</h1>
 <hr>
 <h2 id="intro">はじめに</h2>
-<p>2019年3月1日にNetBSD開発者になり、<a href="https://wiki.netbsd.org/projects/project/syspkgs/">syspkg</a>とInstallationの作業をすることになりました。大学院での研究成果について「いっそ開発者になってアップストリームをいじればいい」と言われてから半年以上が経ち、2019年1月からようやく腰を上げて開発者申請をしたという経緯がありました。</p>
+<p>2019年3月1日にNetBSD開発者となり、<a href="https://wiki.netbsd.org/projects/project/syspkgs/">syspkg</a>とInstallationの作業をすることになりました。大学院での研究成果について「いっそ開発者になってアップストリームをいじればいい」と言われてから半年以上が経ち、2019年1月からようやく腰を上げて開発者申請をしたという経緯がありました。</p>
 
 <p>NetBSD自体がマイナーなOSであり、その開発者になるにはどうしたらいいかという文書は日本語で書かれている印象がないのでここに残しておきます。また<code>pkgsrc(7)</code>のCVS repositoryに直接commitするにも開発者申請が必要ですが、ここではその話はしません。</p>
 
@@ -24,7 +24,7 @@
 <p>大学3年生冬の研究室配属ののち、研修で触ったのがNetBSDでした。卒業論文のために書いたプログラムはNetBSDに完全に依存していて、修士論文もまた同様でした。これは自発的に（無論、研究テーマを決めたのは自分自身）NetBSDを使い始めたというわけではなく、なりゆきでそうなったと言うのが正しいと思います。</p>
 
 <h2>2. できそうなことを見つける</h2>
-<p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかると思います。それをメーリングリストやユーザ会に報告したり、自分でそれを解決する、あるいはしたいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
+<p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかると思います。その問題を自分で解決したいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
 
 <h3>2.1. 僕の場合</h3>
 <p>修士論文で書いたプログラムがNetBSDのソースツリーの一部に依存しており、事実そこだけforkしている形になっていました。しかしforkingの弊害、つまりアップストリームの変更に追従していくのが大変という問題に気づきました。</p>
@@ -42,7 +42,7 @@
 <p>成果をAsiaBSDConや日本NetBSDユーザーズグループのBoFで発表しました。成果物があまりにも特定分野に偏りすぎているがために特定のユーザコミュニティ内で成果発表をしないとあまり意味がない場合もあります。GNU/LinuxやLinuxカーネルならまだしも、*BSDはまさにこの典型です。</p>
 
 <h2>4. スポンサーを探す</h2>
-<p>最難関の手順です。まずこの時点で誰がNetBSDの開発者なのかを把握していないといけません。そのためにはSNSだけでなく対面して会える現実世界でのカンファレンスやイベントに出向く必要もあるでしょう。スポンサーになってくれるかどうか開発者に尋ねて、OKをもらってください。</p>
+<p>最難関の手順です。まずこの時点で誰がNetBSDの開発者なのかを把握していないといけません。そのためにはSNSだけでなく対面して会える現実世界でのカンファレンスやイベントに出向く必要もあるでしょう。スポンサーになってくれるかを開発者に尋ねて、OKをもらってください。</p>
 
 <p>ここから<a href="https://www.netbsd.org/foundation/policies/application-procedure.html">New NetBSD developer application procedure</a>の流れに沿って動くことになります。この時点ではまだ"Existing members decide to sponsor a potential member."の途中です。</p>
 
