neomutt.html: tari-tari fixed

--- a/introduction/neomutt.html
+++ b/introduction/neomutt.html
@@ -15,7 +15,7 @@
 <h2>NeoMuttとは</h2>
 <p><code>neomutt(1)</code>はコマンドラインで利用できるメールクライアントです。名前の通り、メールクライアントmuttからforkしたソフトウェアです。</p>
 
-<p>CUIでメールクライアントを使う利点として省メモリ・省スペースが挙げられます。特に<code>tmux(1)</code>と組み合わせて使うと、ひとつの画面でメールを見ながら作業したり、メールを書いている途中で調べものをするのが楽になります。Thunderbirdではメールへの署名や暗号化にプラグインが別途必要ですが、<code>neomutt(1)</code>では標準でその機能が提供されています。</p>
+<p>CUIでメールクライアントを使う利点として省メモリ・省スペースが挙げられます。特に<code>tmux(1)</code>と組み合わせて使うと、ひとつの画面でメールを見ながら作業したり、メールを書いている途中で調べものをしたりするのが楽になります。Thunderbirdではメールへの署名や暗号化にプラグインが別途必要ですが、<code>neomutt(1)</code>では標準でその機能が提供されています。</p>
 
 <h2>インストール</h2>
 <p><code>pkgsrc(7)</code>ではmail/neomuttパッケージとして提供されています。SMTPサーバへの認証にsecurity/cy2-plainパッケージも必要です。</p>
