ricty.html: terminology fixed

--- a/introduction/ricty.html
+++ b/introduction/ricty.html
@@ -13,7 +13,7 @@
 <h1>日本語フォント&mdash;&mdash;Ricty</h1>
 <hr>
 <h2>Ricty</h2>
-<p>Rictyはプログラミング用の日本語フォントです。ライセンスの都合上Rictyフォントそのものの再頒布はできません。<code>pkgsrc(7)</code>からビルドする必要があります。なお、再頒布可能なRicty Dimishedもあります。詳しくはRictyのホームページを確認してください。<a href="https://www.rs.tus.ac.jp/yyusa/ricty.html">https://www.rs.tus.ac.jp/yyusa/ricty.html</a></p>
+<p>Rictyはプログラミング用の日本語フォントです。ライセンスの都合上Rictyフォントそのものの再頒布はできません。<code>pkgsrc(7)</code>からビルドする必要があります。なお、再頒布可能なRicty Dimishedもあります。詳しくは<a href="https://www.rs.tus.ac.jp/yyusa/ricty.html">Rictyのホームページ</a>を確認してください。</p>
 
 <h2>インストール</h2>
 <p><code>pkgsrc(7)</code>ではfonts/ricty-ttfパッケージとして提供されています。</p>
