intro.html: redundant expression fixed

--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -52,7 +52,7 @@ main(void)
 
 <pre><code>$ man 3 printf</code></pre>
 
-<p>と実行することで閲覧できます。ページャ（pager）には通常<code>more(1)</code>か<code>less(1)</code>が使われますが、環境変数PAGERを設定して任意のページャを指定することもできます。</p>
+<p>と実行することで閲覧できます。ページャ（pager）には通常<code>more(1)</code>か<code>less(1)</code>が使われますが、環境変数PAGERを設定して任意のページャを指定できます。</p>
 
 <p>近年ではマニュアルページを書かず<code>-h</code>や<code>--help</code>あるいは<code>usage</code>の出力だけで済ませようとするソフトウェアも存在します（おそらく<code>groff(1)</code>で書くのが面倒なのでしょう）。単にコマンドライン引数について調べたいときなどはこれを使ったほうが手っ取り早い場合もあります。</p>
 
