--- a/introduction/desktop_howto.html
+++ b/introduction/desktop_howto.html
@@ -13,7 +13,7 @@
 <h1>デスクトップ環境の作り方</h1>
 <hr>
 <h2>なぜ作り方を知っておくと良いのか</h2>
-<p>雑な言い方をしてしまえば、GNOMEやKDEまたはXfce4のような統合デスクトップ環境を使うのが一番手っ取り早いし機能も豊富だと思われます。一方でこれらの「てんこ盛り」な環境をインストールしても、たいしてUnixの訓練にはなりません。なぜならインストール方法も使い方も簡単すぎて特にこれといって知識やノウハウを習得できないからです（当然、使い方が簡単すぎるというのは技術やUIの偉大な進歩の結果であります）。</p>
+<p>雑な言い方をしてしまえば、GNOMEやKDEまたはXfce4のような統合デスクトップ環境を使うのが一番手っ取り早いし機能も豊富だと思われます。一方でこれらの「てんこ盛り」な環境をインストールしても、たいしてUnixの訓練にはなりません。なぜならインストール方法や使い方が簡単すぎて特にこれといって知識やノウハウを習得できないからです（当然、使い方が簡単すぎるというのは技術やUIの偉大な進歩の結果であります）。</p>
 
 <p>日常生活で使うに耐えうるデスクトップ環境を作る方法を学ぶには、統合デスクトップ環境をインストールするよりも、ひとつひとつパッケージをインストールして設定する他ありません。また稀なケースとして、マシンスペックがあまりにも低すぎてXfce4ですらまともに動かないケースも無くはないでしょう。そのような事態に直面したとき、統合デスクトップ環境以外を知らなければ話になりません。</p>
 
@@ -48,7 +48,7 @@
 
 <figure>
 <blockquote><p>Xでは、このウィンドウの外見や操作性を提供しているのは<b>ウィンドウマネージャ</b>というプログラムです。デフォルトでは、TWMというウィンドウマネージャが動作しています。これをほかのものに変更したりカスタマイズしたりすることで、見違えるようなデスクトップ環境を作り出すことができます。なお、ここでいう「デスクトップ環境」とはウィンドウマネージャ単体ではなく、共通した外観や操作性を持ったアプリケーション群一体を指します。</p></blockquote>
-<footer>&mdash; <cite>FreeBSD徹底入門 [改訂版]</cite>, p296</footer>
+<footer>&mdash; <cite>FreeBSD徹底入門［改訂版］</cite>, p296</footer>
 </figure>
 
 <p>ウィンドウマネージャは数え切れないほど多くの実装がありすべてを紹介するのは不可能です。本ページでは"i3"というタイル型ウィンドウマネージャをおすすめしますが、これは操作方法を覚えるのに少し時間がかかります。多くの人にとっては"JWM"や"Window Maker"といったスタック型ウィンドウマネージャが扱いやすいでしょう。ウィンドウマネージャのパッケージをひとつずつ試していって好みのものを模索してください。</p>
