pkgintro.html: textlint fixed

--- a/essay/pkgintro.html
+++ b/essay/pkgintro.html
@@ -16,18 +16,18 @@ code{line-height:1.4;}
 <p>Last Update: <time>2018-12-15</time></p>
 <hr>
 <h2>なぜパッケージに注目するのか</h2>
-<p>パッケージ（package）はオペレーティングシステム（OS, operating system）の重要なインフラのひとつです。OSと聞くとプロセス管理・メモリ管理・ファイルシステムといったカーネルの機能を連想してしまいがちです。『4.4BSDの設計と実装』『詳解 Linuxカーネル』『オペレーティングシステム 設計と理論およびMINIXによる実装』といった分厚い書籍を思い浮かべるかもしれません。でもそれよりももっと高いレイヤのアプリケーションだって立派にOSの一部です。プログラマにとって統合開発環境やテキストエディタ・バージョン管理システム・コンパイラは欠かせなですし、一般ユーザにとっても統合デスクトップ環境が提供する豪華なグラフィカルは欠かせません。特にWebブラウザはもうそれ無しで生活することなど考えられないような時代になっています。</p>
+<p>パッケージ（package）はオペレーティングシステム（OS, operating system）の重要なインフラのひとつです。OSといえばプロセス管理・メモリ管理・ファイルシステムといったカーネルの機能を連想してしまいがちです。『4.4BSDの設計と実装』『詳解Linuxカーネル』『オペレーティングシステム設計と理論およびMINIXによる実装』などの分厚い書籍を思い浮かべるかもしれません。でもそれよりももっと高いレイヤのアプリケーションだって立派にOSの一部です。プログラマにとって統合開発環境やテキストエディタ・バージョン管理システム・コンパイラは欠かせなですし、一般ユーザにとっても統合デスクトップ環境が提供する豪華なグラフィカルは欠かせません。特にWebブラウザはもうそれ無しで生活することなど考えられないような時代になっています。</p>
 
-<p>Debian GNU/LinuxやRed Hat Enterprise Linux（RHEL）のようにOS全体をパッケージで管理しているケースもあれば、NetBSDやFreeBSDのようにベースシステム（base system）に無いソフトウェアをパッケージで管理しているケースもあります。システム管理という面ではパッケージはとても便利な機能なので、FreeBSDではベースシステムをパッケージ化してパッケージマネージャから管理できるようにするPkgBase[<a href="#pkgbase">FreeBSD Wiki</a>]が開発されています（NetBSDも昔syspkgというPkgBaseと同じコンセプトの実装が進められていたが現在は停滞している[<a href="syspkg">NetBSD Wiki</a>]）。</p>
+<p>Debian GNU/LinuxやRed Hat Enterprise Linux（RHEL）のようにOS全体をパッケージで管理しているケースもあれば、NetBSDやFreeBSDのようにベースシステム（base system）に無いソフトウェアをパッケージで管理しているケースもあります。システム管理という面ではパッケージはとても便利な機能なので、FreeBSDではベースシステムをパッケージ化してパッケージマネージャから管理できるようにするPkgBase[<a href="#pkgbase">FreeBSD Wiki</a>]が開発されています（NetBSDも昔syspkgというPkgBaseと同じコンセプトの実装が進められていましたが現在は停滞しています[<a href="syspkg">NetBSD Wiki</a>]）。</p>
 
-<p>このようにパッケージはカーネルハッカーはともかく一般ユーザにとっては一種のインフラのようなものと言っても過言ではないでしょう。そして、それをどう作りどう配布するのか？を調べると、OSはどのような構成をしているのかおおまかに眺めることもできます。そしてこれをものにすれば、自分で好きなGNU/Linuxディストリビューションあるいはデスクトップ向けのBSD Unixを作ることだってできます。</p>
+<p>このようにパッケージは一般ユーザにとって一種のインフラのようなものと言っても過言ではないでしょう。そして、それをどう作りどう配布するのか？を調べると、OSはどのような構成をしているのかおおまかに眺めることもできます。パッケージングの技術をものにすれば、自分で好きなGNU/Linuxディストリビューションあるいはデスクトップ向けのBSD Unixを作ることだってできます。</p>
 
 <p>OSに興味はなくても、パッケージには向き合わなければならないときがあります。もしなにかコードを書いてFLOSSとして公開するなら、そしてGNU/Linux向けにそれを書いたのであれば、<code>deb(5)</code>か<code>rpm</code>をいつでも（できれば両方）作れるようにしておくとそのソフトウェアを使いたいユーザにとって便利です。企業でGNU/Linux向け商用ソフトウェアを開発するときも、そのソフトウェアをパッケージにまとめ頒布する作業は必要です。</p>
 
 <h2>Unix パッケージのはじまりは？</h2>
 <p>パッケージは「荷物」や「梱包」の他にソフトウェアの管理・配布形式（形態？）も意味します。しかしこの言葉がいつからソフトウェアに対して使うようになったのか分かりません。確かに「ソフトウェアやその設定ファイル・マニュアルなどを含んだ単一のアーカイブ」は言われてみれば荷物のようであるし、実際にこれを作るときはまるで段ボールのような箱にデータを詰め込んでいる感覚があるので「パッケージ」という言葉はまさにぴったりです。</p>
 
-<p>パッケージはよく「ソフトウェア・ライブラリ・設定ファイル・マニュアルなどをアーカイブにしたもの」というような説明がされます。僕は「パッケージ自身の情報（メタデータ）」をこの説明に付け加えたいといつも考えてしまいます。たとえばDebian GNU/Linux上で<code>dpkg(1)</code>や<code>apt(8)</code>といったパッケージマネージャを実行してなんらかのパッケージをインストールするとき、インストール対象のパッケージが依存している別のパッケージも自動でインストールされたりあるいはサジェストされたりするのはすべてメタデータが存在するからです。</p>
+<p>パッケージはよく「ソフトウェア・ライブラリ・設定ファイル・マニュアルなどをアーカイブにしたもの」というような説明がされます。僕は「パッケージ自身の情報（メタデータ）」をこの説明に付け加えたいといつも考えてしまいます。たとえばDebian GNU/Linux上で<code>dpkg(1)</code>や<code>apt(8)</code>といったパッケージマネージャを実行してなんらかのパッケージをインストールするとき、インストール対象のパッケージが依存している別のパッケージも自動でインストールされるのはメタデータのおかげです。</p>
 
 <p>メタデータはソフトウェアのパッケージにのみ存在するわけではありません。僕たちが引っ越しや贈り物の準備をするとき、段ボールにモノを詰め込むだけでなく、配送業者向けに宛先や送り主の名前を書いた伝票を段ボールに貼り付けますが、これもメタデータといっていいでしょう。</p>
 
@@ -35,7 +35,7 @@ code{line-height:1.4;}
 
 <h3>GNU/Linuxとパッケージマネージャ</h3>
 
-<p>パッケージ主体のGNU/LinuxディストリビューションはDebian GNU/Linuxが先陣を切りました。Debian 0.01から0.90までのリリースについては不明ですが、1994年1月のDebian 0.91は「このリリースは、パッケージのインストールおよび削除ができる単純なパッケージシステムを備えていました」[<a href="#debian-project-history">Debian, 2017</a>]とされ、1995年3月のDebian 0.93R5では「基本システムのインストール後は、パッケージマネージャ (dpkg) がパッケージのインストールに使われました」[<a href="#debian-project-history">Debian, 2017</a>]とあります。</p>
+<p>パッケージ主体のGNU/LinuxディストリビューションはDebian GNU/Linuxが先陣を切りました。Debian 0.01から0.90までのリリースについては不明ですが、1994年1月のDebian 0.91では「このリリースは、パッケージのインストールおよび削除ができる単純なパッケージシステムを備えていました」[<a href="#debian-project-history">Debian, 2017</a>]とされています。また1995年3月のDebian 0.93R5では「基本システムのインストール後は、パッケージマネージャ (dpkg) がパッケージのインストールに使われました」[<a href="#debian-project-history">Debian, 2017</a>]とあります。</p>
 
 <p>しかしDebian GNU/Linuxがパッケージに関して独占的であったかというと、そうではなかったようです。GNU/LinuxディストリビューションをCD-ROMの形態で販売したRed Hat社が提供したRed Hat Linuxは、1994年の夏にRed Hat LinuxとそのパッケージマネージャRPPの展示のためにプレビュー版（バージョン0.8）がリリースされ、1994年10月31日にバージョン0.9となるHalloweenがリリースされました[<a href="#redhat-20-year">Red Hat, 2014</a>][<a href="#smoogespace">Stephen, 2006</a>]。Debian GNU/Linux 0.91のリリースと同じ年です。「Fully "packagized" system for fine-grained installation control, easy upgrades, and simple distribution mechanism for your applications」[<a href="#redhat-commercial">Red Hat, 1995</a>]とアピールされたのは1995年のバージョン1.1なので、Halloweenの時点でOS全体がパッケージ管理されていたのかは定かではありません。</p>
 
@@ -55,7 +55,7 @@ There's a myth that's been going around ever since RedHat debuted RedHat Package
 
 <p>これはそう簡単に調べられるものではありませんが、共立出版株式会社の『UNIX System V コマンド・ノート』がたまたま手に入ったので調べてみると、少なくともこの本の中にはパッケージの操作に関するコマンドは載っていませんでした[<a href="#sysv">System V, 1986</a>]。</p>
 
-<p>FreeBSDの<code>ports(7)</code>は1993年12月にリリースされたFreeBSD 1.0から登場し、NetBSDとOpenBSDにも広まっていきました[<a href="#ports">ports(7), 2014</a>][<a href="#fbsd">FreeBSD</a>]。386BSDから分岐したBSD Unixの中でFreeBSDが初めてこのようなパッケージ管理システムを実装した（NetBSDで主に使われる<code>pkgsrc(7)</code>は<code>ports(7)</code>から派生した[<a href="#pkgsrc">pkgsrc, 2018</a>]）ので、<code>ports(7)</code>の前身が分かれば自ずと答えが分かるのでしょうか？（<b>TODO</b>）</p>
+<p>FreeBSDの<code>ports(7)</code>は1993年12月にリリースされたFreeBSD 1.0から登場し、NetBSDとOpenBSDにも広まっていきました[<a href="#ports">ports(7), 2014</a>][<a href="#fbsd">FreeBSD</a>]。386BSDから分岐したBSD Unixの中でFreeBSDが初めてこのようなパッケージ管理システムを実装した（NetBSDで主に使われる<code>pkgsrc(7)</code>は<code>ports(7)</code>から派生した[<a href="#pkgsrc">pkgsrc, 2018</a>]）ので、<code>ports(7)</code>の前身が分かればおのずと答えが分かるのでしょうか？（<b>TODO</b>）</p>
 
 <h2>代表的なUnixとそのパッケージ</h2>
 
@@ -106,7 +106,7 @@ RPM（Red Hat Packageマネージャ）は、Linuxのもとでインストール
 
 <h3>FreeBSD Ports Collection</h3>
 
-<p>FreeBSDはPorts Collectionは「Makefile, 修正パッチ、 説明文などの一連のファイルのこと」[<a href="#portsc">FreeBSD</a>]で、一般的には短縮して<code>ports(7)</code>と呼ばれます。パッケージのビルドやインストールなどの一連の命令はすべてBSD Makeを使います。たとえばGNU Emacsをインストールするときはroot権限で</p>
+<p>FreeBSDのPorts Collectionは「Makefile, 修正パッチ、 説明文などの一連のファイルのこと」[<a href="#portsc">FreeBSD</a>]で、一般的には短縮して<code>ports(7)</code>と呼ばれます。パッケージのビルドやインストールなどの一連の命令はすべてBSD Makeを使います。たとえばGNU Emacsをインストールするときはroot権限で</p>
 
 <pre><code># cd /usr/ports/editors/emacs
 # make install</code></pre>
@@ -138,7 +138,7 @@ In 1999, I was working at an investment bank in London, and needed a packaging s
 
 <h2>まとめ</h2>
 
-<p>はじめになぜパッケージに注目するのかを説明しました。パッケージはOSのインフラで、便利で手放せないものです。そしてインフラであるからこそパッケージを調べればOSの構造を理解する手助けにもなります。同じ形式のパッケージを提供するOSを複数比べてみると、パッケージの管理・ビルド方法はそれぞれ異なっていることもあります。</p>
+<p>なぜパッケージに注目するのかを説明しました。パッケージはOSのインフラで、便利で手放せないものです。そしてインフラだからこそパッケージを調べればOSの構造を理解する手助けにもなります。同じ形式のパッケージを提供するOSを複数比べてみると、パッケージの管理・ビルド方法はそれぞれ異なっていることもあります。</p>
 
 <p>ときどき、パッケージのオンラインマニュアルを読んでみてもいいのかもしれません。</p>
 
