--- a/coding/html.html
+++ b/coding/html.html
@@ -259,7 +259,7 @@ Output file size = 98570 bytes (18290 bytes = 15.65% decrease)</code></pre>
 <h3>引用の方法</h3>
 <p>引用の方法はそれが短いものか長いものかによって変わります。どの程度から長いと判断するかは曖昧ですが、文を2〜3以上引用したいのであれば長い引用の方法をとります。</p>
 
-<p>短い引用であれば「」で囲んで文中に書き、出典元を（）の中に明記します。たとえば「出版された情報をコンピュータを使って共有しようとする読者は、 法律上は著作権に違反しているのです」（Richard Stallman, 『自由か著作権か？』）</p>
+<p>短い引用であれば「」で囲んで文中に書き、出典元を（）の中に明記します。たとえば「出版された情報をコンピュータを使って共有しようとする読者は、 法律上は著作権に違反しているのです」（Richard Stallman,『自由か著作権か？』）</p>
 
 <p>長い引用は<code>blockquote</code>タグを使います。コードのフォーマットは以下の通りです（読みやすさを考慮し整形）。</p>
 
@@ -276,7 +276,7 @@ Output file size = 98570 bytes (18290 bytes = 15.65% decrease)</code></pre>
 
 <figure><blockquote><p>しかし、そこには1つの障害が立ちはだかっていました。著作権です。出版された情報をコンピュータを使って共有しようとする読者は、 法律上は著作権に違反しているのです。世界は変わり、かつては出版社にとっての産業上の規制であったものが、 本来奉仕すべき一般の人々に対しての規制となってしまいました。</p></blockquote>
 <footer>
-&mdash; <cite>Richard Stallman</cite>, <cite>結城浩 訳</cite>, <cite>自由か著作権か？</cite>
+&mdash; <cite>Richard Stallman</cite>, <cite>結城浩（訳）</cite>, <cite>自由か著作権か？</cite>
 </footer></figure>
 
 <h3>HTML5コーディングのための$HOME/.vimrc</h3>
