--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li><a href="./netbsd/update_pkgsrc.html">pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</a></li>
 <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
 <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
+<li><a href="./netbsd/chroot.html">chroot(8)を使ってホストから分離された環境を作る</li>
 <li><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></li>
 <li><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 </ul></li>
